--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/SeekTom/Contact-Centre-Node#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "mustache-express": "^1.2.5",
-    "twilio": "^3.14.0"
+    "mustache-express": "^1.2.6",
+    "pug": "^2.0.3",
+    "twilio": "^3.14.0",
+    "utf8": "^3.0.0"
   }
 }
